correction in find_similar function

--- a/Semantic Search using Distilbert.ipynb
+++ b/Semantic Search using Distilbert.ipynb
@@ -268,7 +268,7 @@
    "source": [
     "def find_similar(vector_representation, all_representations, k=1):\n",
     "    similarity_matrix = cosine_similarity(vector_representation, all_representations)\n",
-    "    np.fill_diagonal(similarity_matrix, 0)\n",
+    "    #np.fill_diagonal(similarity_matrix, 0)\n",
     "    similarities = similarity_matrix[0]\n",
     "    if k == 1:\n",
     "        return [np.argmax(similarities)]\n",
@@ -694,7 +694,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
